--- a/projects.json
+++ b/projects.json
@@ -28,5 +28,15 @@
     "mediaType": "youtube",
     "mediaUrl": "https://www.youtube.com/embed/k_mOLVYPUOQ?",
     "projectLink": "https://example.com"
+  },
+  {
+    "id": 4,
+    "title": "Personal Portfolio Website",
+    "titleHighlight": "Portfolio",
+    "highlightColor": "blue",
+    "description": "Designed and developed a personal portfolio website using HTML, CSS, and JavaScript to showcase projects and skills effectively.",
+    "mediaType": "youtube",
+    "mediaUrl": "https://www.youtube.com/embed/3b6j0bX1k1A?",
+    "projectLink": "https://firdausportfolio.example.com"
   }
 ]
