--- a/projects.json
+++ b/projects.json
@@ -37,6 +37,6 @@
     "description": "Designed and developed a personal portfolio website using HTML, CSS, and JavaScript to showcase projects and skills effectively.",
     "mediaType": "youtube",
     "mediaUrl": "https://www.youtube.com/embed/3b6j0bX1k1A?",
-    "projectLink": "https://firdausportfolio.example.com"
+    "projectLink": "https://github.com/Afaz-Dev/portfolio"
   }
 ]
