--- a/projects.json
+++ b/projects.json
@@ -36,7 +36,7 @@
     "highlightColor": "blue",
     "description": "Designed and developed a personal portfolio website using HTML, CSS, and JavaScript to showcase projects and skills effectively.",
     "mediaType": "youtube",
-    "mediaUrl": "https://www.youtube.com/embed/3b6j0bX1k1A?",
+    "mediaUrl": "https://www.firdauszaki.com/preview.png",
     "projectLink": "https://github.com/Afaz-Dev/portfolio"
   }
 ]
