--- a/projects.json
+++ b/projects.json
@@ -27,7 +27,7 @@
     "description": "Developed an Orbital Mechanics simulation in Godot 2D simulating the n-body problem and the use of the polar equation of 2-body orbits.",
     "mediaType": "youtube",
     "mediaUrl": "https://www.youtube.com/embed/k_mOLVYPUOQ?",
-    "projectLink": "https://example.com"
+    "projectLink": "https://github.com/Afaz-Dev/Orbital-Mechanics-Simulation-2D"
   },
   {
     "id": 4,
